feat: automatically deploy lambdaedge functions

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -342,18 +342,6 @@ jobs:
             || secrets.STAGING_AWS_CF_DISTRIBUTION_ID
         }}
       AWS_DEFAULT_REGION: us-east-1
-      AWS_ORIGIN_REQUEST_FUNCTION_ARN: >-
-        ${{
-          github.ref == 'refs/heads/master'
-            && secrets.PRODUCTION_AWS_ORIGIN_REQUEST_FUNCTION_ARN
-            || secrets.STAGING_AWS_ORIGIN_REQUEST_FUNCTION_ARN
-        }}
-      AWS_ORIGIN_RESPONSE_FUNCTION_ARN: >-
-        ${{
-          github.ref == 'refs/heads/master'
-            && secrets.PRODUCTION_AWS_ORIGIN_RESPONSE_FUNCTION_ARN
-            || secrets.STAGING_AWS_ORIGIN_RESPONSE_FUNCTION_ARN
-        }}
       AWS_S3_BUCKET_NAME: >-
         ${{
           github.ref == 'refs/heads/master'
@@ -372,11 +360,6 @@ jobs:
         with:
           name: front_build
           path: build
-
-      - uses: actions/download-artifact@v2
-        with:
-          name: web-fns_build
-          path: fns
 
       - name: Deploy to S3
         run: aws s3 sync build/ "s3://$AWS_S3_BUCKET_NAME" --delete
@@ -402,20 +385,70 @@ jobs:
           --copy-props metadata-directive
           --cache-control max-age=31536000
 
-      - name: Deploy Origin Request to Lambda
-        run: >-
-          aws lambda update-function-code
-          --function-name "$AWS_ORIGIN_REQUEST_FUNCTION_ARN"
-          --zip-file fileb://fns/origin_request_lambda_function.zip
-
-      - name: Deploy Origin Response to Lambda
-        run: >-
-          aws lambda update-function-code
-          --function-name "$AWS_ORIGIN_RESPONSE_FUNCTION_ARN"
-          --zip-file fileb://fns/origin_response_lambda_function.zip
-
       - name: Clear CloudFront cache
         run: >-
           aws cloudfront create-invalidation
           --distribution-id "$AWS_CF_DISTRIBUTION_ID"
           --paths /\*
+
+  deploy_lambdas:
+    runs-on: ubuntu-20.04
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
+    needs:
+      - build_front
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: web-fns_build
+          path: packages/web-fns/build
+
+      - name: Cache modules
+        uses: actions/cache@v2
+        with:
+          path: |
+            .yarn/unplugged
+            .yarn/build-state.yml
+            .yarn/install-state.gz
+            node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles('.yarnrc.yml') }}
+
+      - name: Link dependencies
+        run: yarn install --immutable --immutable-cache
+
+      - name: Deploy lambdas if necessary
+        run: yarn workspace @dandercoin/web-fns deploy
+        env:
+          AWS_ACCESS_KEY_ID: >-
+            ${{
+              github.ref == 'refs/heads/master'
+                && secrets.PRODUCTION_AWS_ACCESS_KEY_ID
+                || secrets.STAGING_AWS_ACCESS_KEY_ID
+            }}
+          AWS_CF_DISTRIBUTION_ID: >-
+            ${{
+              github.ref == 'refs/heads/master'
+                && secrets.PRODUCTION_AWS_CF_DISTRIBUTION_ID
+                || secrets.STAGING_AWS_CF_DISTRIBUTION_ID
+            }}
+          AWS_LAMBDA_ORIGIN_REQUEST_FUNCTION_ARN: >-
+            ${{
+              github.ref == 'refs/heads/master'
+                && secrets.PRODUCTION_AWS_LAMBDA_ORIGIN_REQUEST_FUNCTION_ARN
+                || secrets.STAGING_AWS_LAMBDA_ORIGIN_REQUEST_FUNCTION_ARN
+            }}
+          AWS_LAMBDA_ORIGIN_RESPONSE_FUNCTION_ARN: >-
+            ${{
+              github.ref == 'refs/heads/master'
+                && secrets.PRODUCTION_AWS_LAMBDA_ORIGIN_RESPONSE_FUNCTION_ARN
+                || secrets.STAGING_AWS_LAMBDA_ORIGIN_RESPONSE_FUNCTION_ARN
+            }}
+          AWS_REGION: us-east-1
+          AWS_SECRET_ACCESS_KEY: >-
+            ${{
+              github.ref == 'refs/heads/master'
+                && secrets.PRODUCTION_AWS_SECRET_ACCESS_KEY
+                || secrets.STAGING_AWS_SECRET_ACCESS_KEY
+            }}
