--- a/packages/web/.env.development
+++ b/packages/web/.env.development
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_DANDERCOIN_CONTRACT_ADDRESS=0x09d88d025da50b32835958ddc1607b5c3ef2669b
 NEXT_PUBLIC_DISTRIBUTOR_CONTRACT_ADDRESS=0x24F8697132230108315a9fD05f3EB4099826E2f5
 NEXT_PUBLIC_ETHEREUM_BLOCK_EXPLORER_URL=https://mumbai.polygonscan.com
+NEXT_PUBLIC_ETHEREUM_BLOCK_TIME_MILLISECONDS=2000
 NEXT_PUBLIC_ETHEREUM_CHAIN_ID=1337
 NEXT_PUBLIC_ETHEREUM_CHAIN_NAME="Local"
 NEXT_PUBLIC_ETHEREUM_CHAIN_NATIVE_CURRENCY_NAME=
