--- a/packages/web/.env.development
+++ b/packages/web/.env.development
@@ -8,4 +8,5 @@ NEXT_PUBLIC_ETHEREUM_RPC_URL=
 NEXT_PUBLIC_GOVERNOR_CONTRACT_ADDRESS=0x72A231297623532d1aCaF5a7ba052118114C5114
 NEXT_PUBLIC_IDENTITY_API_ENDPOINT="http://localhost:8000"
 NEXT_PUBLIC_IDENTITY_ORACLE_CONTRACT_ADDRESS=0x1473dd78a0568483dfbcbbec6b3486f4cdcf3cec
+NEXT_PUBLIC_SHOW_WIP=true
 NEXT_PUBLIC_TIMELOCK_CONTRACT_ADDRESS=0xd6D970FDD3D180765af921a1e7070Ac05dec9984
