--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,8 @@
     "devchain": "ganache-cli --chainId 1337 -a 3 -m 'genuine remain eagle depart water trick purse peace limit series piano congress' -h 0.0.0.0",
     "migrate": "truffle migrate",
     "migrate:testnet": "truffle migrate --network test",
-    "test": "truffle test"
+    "test": "truffle test",
+    "verify:testnet": "./scripts/verifyTestnet.sh"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
@@ -17,6 +18,7 @@
     "@types/bn.js": "^5.1.0",
     "bn.js": "^5.2.0",
     "ganache-cli": "^6.12.2",
-    "truffle": "^5.4.11"
+    "truffle": "^5.4.11",
+    "truffle-plugin-verify": "^0.5.15"
   }
 }
