--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
     "build": "truffle compile",
     "extract": "node ./scripts/extract.mjs",
     "devchain": "ganache-cli --chainId 1337 -a 3 -m 'genuine remain eagle depart water trick purse peace limit series piano congress' -h 0.0.0.0",
+    "initial-distribution": "node ./scripts/initialDistribution.mjs",
     "migrate": "truffle migrate",
     "migrate:testnet": "truffle migrate --network test",
     "test": "truffle test",
@@ -16,7 +17,9 @@
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.5.0",
     "@types/bn.js": "^5.1.0",
+    "@types/csv-parse": "^1.2.2",
     "bn.js": "^5.2.0",
+    "csv-parse": "^4.16.3",
     "ganache-cli": "^6.12.2",
     "truffle": "^5.4.11",
     "truffle-plugin-verify": "^0.5.15"
