--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "$": "link:./src",
+    "@sendgrid/mail": "^7.4.6",
     "@vendia/serverless-express": "^4.3.7",
     "aws-sdk": "^2.916.0",
     "body-parser": "^1.19.0",
